# backlight

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: GNUInstallDirs.hpp.in  backlight.cpp  backlight.hpp  backlight_absolute.cpp  backlight_decrement.cpp  backlight_increment.cpp  battery.cpp  bl_scanner.cpp  concepts.hpp  enum_flags.hpp  environment_arguments.cpp  environment_arguments.hpp  filesystem.hpp  generate_config_file.cpp  logging.hpp  parse_arguments.hpp  parse_config_file.hpp  scratch  swayutil.cpp  utility.hpp  version.hpp.in
tools/: generate_consts.cpp
